Fix Quill editor list spacing

--- a/client/styles/components/quill_editor.scss
+++ b/client/styles/components/quill_editor.scss
@@ -159,7 +159,7 @@
     }
     .ql-editor ol,
     .ql-editor ul {
-        padding-left: 1.75em;
+        padding-left: 1em;
     }
     .ql-editor ol > li,
     .ql-editor ul > li {
@@ -181,12 +181,13 @@
     .ql-editor li::before {
         display: inline-block;
     }
-    .ql-editor li:not(.ql-direction-rtl)::before {
+    .ql-editor li:not(n.ql-direction-rtl)::before {
         margin-left: -1.75em;
     }
     .ql-editor ol li,
     .ql-editor ul li {
         padding-left: 1em;
+        margin: 0;
     }
     .ql-editor ol li {
         counter-reset: list-1 list-2 list-3 list-4 list-5 list-6 list-7 list-8 list-9;
@@ -290,12 +291,14 @@
         color: #777;
         position: relative;
         top: 1px;
+        font-family: $fonts;
     }
     .ql-editor ul[data-checked=false] > li::before {
         content: '\f096';
         color: #b0bec5;
         position: relative;
         top: 1px;
+        font-family: $fonts;
     }
     .ql-editor .ql-indent-1:not(.ql-direction-rtl) {
         padding-left: 3em;
@@ -1027,7 +1030,6 @@
         // construct-ui input styles
         color: #37474f;
         box-shadow: 0px 1px 0px #eef1f2;
-        transition: border 200ms cubic-bezier(0.4, 1, 0.75, 0.9), background 200ms cubic-bezier(0.4, 1, 0.75, 0.9), color 200ms cubic-bezier(0.4, 1, 0.75, 0.9);
     }
 
     .ql-bubble.ql-toolbar:after,
