--- a/client/styles/components/quill_formatted_text.scss
+++ b/client/styles/components/quill_formatted_text.scss
@@ -70,7 +70,7 @@
     // list styles
     ul, ol {
         li {
-            margin: 6px 0;
+            margin: 2px 0;
         }
     }
     ul.checklist {
